# python-project-lvl2

./: .travis.yml  Makefile  README.md  pyproject.toml
gendiff/: arg_parser.py  diff_tree.py  file_utils.py  render.py  utils.py
gendiff/renders/: __init__.py  render.py  render_json.py  render_plain.py  render_pretty.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_utils.py
gendiff/tests/fixtures/: after.json  after.yaml  before.json  before.yaml  expected.txt  expected_json.json  expected_plain.txt
tests/: test_diff_tree.py  test_file_utils.py  test_render.py  test_renders.py
tests/fixtures/: __init__.py  fixtures.py
tests/fixtures/files/: before.json  before.yaml  expected.txt  expected_json.json  expected_plain.txt
